# AvaAi-Agent

./: .gitignore  README.md  arenaHistory.js  arenaMonitor.js  fetch_users_tweet.js  index.js  uprising_users.js
ai-agent/: .env  .gitignore  README.md  app.py  poem.txt  pyproject.toml  requirements.txt
ai-agent/db/: chroma.sqlite3
ai-agent/routes/: crewai_routes.py  user_routes.py
ai-agent/src/arena_analyst/: main.py
ai-agent/src/arena_analyst/crews/avax_crew/: avax_crew.py
ai-agent/src/arena_analyst/crews/avax_crew/config/: agents.yaml  tasks.yaml
ai-agent/src/arena_analyst/crews/avax_crew/files/: data.json
ai-agent/src/arena_analyst/crews/poem_crew/: poem_crew.py
ai-agent/src/arena_analyst/crews/poem_crew/config/: agents.yaml  tasks.yaml
ai-agent/src/arena_analyst/crews/poem_crew/config/db/: chroma.sqlite3
ai-agent/src/arena_analyst/crews/poem_crew/db/fde978db-e8ba-46e3-9b04-d548b47076d7/: index_metadata.pickle
ai-agent/src/arena_analyst/crews/poem_crew/files/: data.json  volume.csv
ai-agent/src/arena_analyst/db/: chroma.sqlite3
ai-agent/src/arena_analyst/tools/: sql_search_tool.py
backend/: .env  arenaHistory.js  arenaMonitor.js  fetch_users_tweet.js  index.js  package-lock.json  package.json  uprising_users.js
backend/config/: db.config.js
backend/constants/: arenaPostConstant.js  enclaveMarketsConstant.js
backend/controllers/: areanController.js  (+1 more)
backend/routes/: index.js  (+1 more)
controllers/: enclaveMarketsController.js
frontend/: package-lock.json  package.json  tailwind.config.js
routes/: arena_post.js  enclave_markets.js  index.js
(+13 files in other folders)
