[project]
name = "arena_analyst"
version = "0.1.0"
description = "arena-analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
]

[project.scripts]
kickoff = "arena_analyst.main:kickoff"
plot = "arena_analyst.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
